Fix root fixed size on mobile

--- a/src/components/Navbar/index.module.css
+++ b/src/components/Navbar/index.module.css
@@ -104,6 +104,10 @@
 
 .root.isFixed {
   height: $size-148;
+
+  @media (width < $Breakpoint-tablet) {
+    height: $size-84;
+  }
 }
 
 .root.isFixed .content {
